# uni

./: .gitignore  .gitmodules  README.md  info.json  mathe-blatt.sty  mathe-vorlesung.sty  mathjax.cfg  note.md  todo.md
abgabe/: Makefile  ana3_1.tex  ana3_10.tex  ana3_11.tex  ana3_13.tex  ana3_14.tex  ana3_1_1.m  ana3_2.tex  ana3_3.tex  ana3_4.tex  ana3_5.tex  ana3_6.tex  ana3_8.tex  ana3_9.tex  ana4_6.tex  fsa_1.tex  mathe-blatt.sty  nla_1.tex  nla_2.tex  nla_3.tex  nla_4.tex  nla_5.tex  nla_6.tex  num1_1.tex  num1_10.tex  num1_11.tex  num1_12.tex  num1_13.tex  num1_1_4.m  num1_2.tex  num1_3.tex  num1_4.tex  num1_5.tex  num1_6.tex  num1_7.tex  num1_8.tex  num1_9.tex  num2_11.tex  num2_2.tex  pse_2.tex  (+6 more)
alg/: README.md  chap1.tex  chap15.tex  chap18.tex  chap19.tex  chap20.tex  vorlesung.tex
algeo/: vorlesung.tex
alggeo/: chap0.tex  course.tex  ex.tex  todo
ana2/: vorlesung.tex
ana3/: Makefile  README  README.md  ana3-pdf.tex~  ana3.tex  index.html  legacy.sty  test.tex  vorlesung.tex
ana4/: ana4.bib  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  vorlesung.tex
apgm/: Makefile  chap0.tex  course.tex  lecture-topics.tex
apkm/: chap1.tex  course.tex
atop/: chap0.tex  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  course.tex
bth/: .gitignore  concept.tex  declaration.tex  ideas  mycourse.cls  mymath.sty  mythesis.cls  note2  package.json  test.html  test.js  thesis.bib  thesis.tex
bth/code/: CMakeLists.txt  Index.h  Integer.h  Interval.h  Order.h  Polynomial.h  Rational.h  Ring.h  RingEl.h  SetEl.h  cppformat  gcd.cpp  gcd.h  math.h  ramd.cpp  ramd.h  test.cpp
bth/code/tests/: binom.cpp  integers.cpp  math.cpp  polynomial.cpp  ramd.cpp  rational.cpp
common/: gloss-german.ldf  indexstyle.xdy  l3backports.sty  mycourse.cls  myexercise.cls  mymath.sty  mystandalone.cls  mywork.cls  pdflatex.mk  tex.mk
concm/: chap1.tex  content.tex  course.tex
diffgeo/: chap0.tex  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  chap6.tex  chap7.tex  course.tex  kap1.tex  vorlesung.tex
diffgeo-vt/: kap2.tex
discgeom/: appendix.tex  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  course.tex
discopt/: course.tex
dsa/: Makefile  mathe-vorlesung.sty  vorlesung.tex
enumpde/: Makefile  chap0.tex  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  course.tex
eopt/: chap1.tex  chap2.tex  chap3.tex  chap4.tex  eopt.bib  vorlesung.tex
geo/: Makefile  (+9 more)
(+313 files in other folders)
